# smartbackup_file-backup-automation

./: .gitignore  CODEBASE_ANALYSIS.md  LICENSE  README.md  main.py  pyproject.toml
docs/: CHANGELOG.md  CONTRIBUTING.md
src/smartbackup/: __init__.py  __main__.py  backup.py  cli.py  config.py  handlers.py  models.py  smart_backup.py
src/smartbackup/core/: __init__.py  compressor.py  detector.py  engine.py  restore.py  scanner.py
src/smartbackup/manifest/: __init__.py  base.py  json_manifest.py
src/smartbackup/platform/: __init__.py  devices.py  identity.py  resolver.py  scheduler.py
src/smartbackup/ui/: __init__.py  colors.py  logger.py
tests/: __init__.py  conftest.py  test_backup.py  test_cli.py  test_compressor.py  test_config.py  test_detector.py  test_engine.py  test_identity.py  test_logger.py  test_manifest.py  test_models.py  test_resolver.py  test_restore.py  test_scanner.py
